--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "server": "nodemon server.js"
   },
@@ -22,5 +22,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.10",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
